[package]
name = "rust-rl"
version = "0.1.0"
authors = ["Alexander Higgins <thealexanderhiggins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.16.1", feature = ["serde"] }
specs-derive = { version = "0.4.1" }
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"